syntax = "proto3";
package product.v1;
option go_package = "github.com/Taras2108/product-catalog-service/proto/product/v1;productv1";

service ProductService {
  rpc CreateProduct(CreateProductRequest) returns (CreateProductReply);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductReply);
  rpc ActivateProduct(ActivateProductRequest) returns (ActivateProductReply);
  rpc DeactivateProduct(DeactivateProductRequest) returns (DeactivateProductReply);
  rpc ArchiveProduct(ArchiveProductRequest) returns (ArchiveProductReply);
  rpc ApplyDiscount(ApplyDiscountRequest) returns (ApplyDiscountReply);
  rpc RemoveDiscount(RemoveDiscountRequest) returns (RemoveDiscountReply);
  rpc GetProduct(GetProductRequest) returns (GetProductReply);
  rpc ListProducts(ListProductsRequest) returns (ListProductsReply);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  string category = 3;
  int64 base_price_numerator = 4;
  int64 base_price_denominator = 5;
}

message CreateProductReply {
  string product_id = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
}

message UpdateProductReply {}

message ActivateProductRequest {
  string product_id = 1;
}

message ActivateProductReply {}

message DeactivateProductRequest {
  string product_id = 1;
}

message DeactivateProductReply {}

message ArchiveProductRequest {
  string product_id = 1;
}

message ArchiveProductReply {}

message ApplyDiscountRequest {
  string product_id = 1;
  int64 percent = 2;
  int64 start_date_unix = 3;
  int64 end_date_unix = 4;
}

message ApplyDiscountReply {}

message RemoveDiscountRequest {
  string product_id = 1;
}

message RemoveDiscountReply {}

message GetProductRequest {
  string product_id = 1;
}

message GetProductReply {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  int64 base_price_numerator = 5;
  int64 base_price_denominator = 6;
  int64 effective_price_numerator = 7;
  int64 effective_price_denominator = 8;
  string status = 9;
}

message ListProductsRequest {
  optional string category = 1;
  int32 page_size = 2;
  string page_token = 3;
}

message ListProductsReply {
  repeated ProductItem items = 1;
  string next_page_token = 2;
}

message ProductItem {
  string product_id = 1;
  string name = 2;
  string description = 3;
  string category = 4;
  int64 base_price_numerator = 5;
  int64 base_price_denominator = 6;
  int64 effective_price_numerator = 7;
  int64 effective_price_denominator = 8;
  string status = 9;
}
